--- a/package.json
+++ b/package.json
@@ -1,100 +1,4 @@
 {
-  "_args": [
-    [
-      "discord.js@12.5.1",
-      "C:\\Users\\zecha\\WebstormProjects\\Lynhall"
-    ]
-  ],
-  "_from": "discord.js@12.5.1",
-  "_id": "discord.js@12.5.1",
-  "_inBundle": false,
-  "_integrity": "sha512-VwZkVaUAIOB9mKdca0I5MefPMTQJTNg0qdgi1huF3iwsFwJ0L5s/Y69AQe+iPmjuV6j9rtKoG0Ta0n9vgEIL6w==",
-  "_location": "/discord.js",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "version",
-    "registry": true,
-    "raw": "discord.js@12.5.1",
-    "name": "discord.js",
-    "escapedName": "discord.js",
-    "rawSpec": "12.5.1",
-    "saveSpec": null,
-    "fetchSpec": "12.5.1"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/discord.js/-/discord.js-12.5.1.tgz",
-  "_spec": "12.5.1",
-  "_where": "C:\\Users\\zecha\\WebstormProjects\\Lynhall",
-  "author": {
-    "name": "Amish Shah",
-    "email": "amishshah.2k@gmail.com"
-  },
-  "browser": {
-    "@discordjs/opus": false,
-    "https": false,
-    "ws": false,
-    "erlpack": false,
-    "prism-media": false,
-    "opusscript": false,
-    "node-opus": false,
-    "tweetnacl": false,
-    "sodium": false,
-    "worker_threads": false,
-    "zlib-sync": false,
-    "src/sharding/Shard.js": false,
-    "src/sharding/ShardClientUtil.js": false,
-    "src/sharding/ShardingManager.js": false,
-    "src/client/voice/ClientVoiceManager.js": false,
-    "src/client/voice/VoiceBroadcast.js": false,
-    "src/client/voice/VoiceConnection.js": false,
-    "src/client/voice/dispatcher/BroadcastDispatcher.js": false,
-    "src/client/voice/dispatcher/StreamDispatcher.js": false,
-    "src/client/voice/networking/VoiceUDPClient.js": false,
-    "src/client/voice/networking/VoiceWebSocket.js": false,
-    "src/client/voice/player/AudioPlayer.js": false,
-    "src/client/voice/player/BasePlayer.js": false,
-    "src/client/voice/player/BroadcastAudioPlayer.js": false,
-    "src/client/voice/receiver/PacketHandler.js": false,
-    "src/client/voice/receiver/Receiver.js": false,
-    "src/client/voice/util/PlayInterface.js": false,
-    "src/client/voice/util/Secretbox.js": false,
-    "src/client/voice/util/Silence.js": false,
-    "src/client/voice/util/VolumeInterface.js": false
-  },
-  "bugs": {
-    "url": "https://github.com/discordjs/discord.js/issues"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-angular"
-    ],
-    "rules": {
-      "scope-case": [
-        2,
-        "always",
-        "pascal-case"
-      ],
-      "type-enum": [
-        2,
-        "always",
-        [
-          "chore",
-          "build",
-          "ci",
-          "docs",
-          "feat",
-          "fix",
-          "perf",
-          "refactor",
-          "revert",
-          "style",
-          "test"
-        ]
-      ]
-    }
-  },
   "dependencies": {
     "@discordjs/collection": "^0.1.6",
     "@discordjs/form-data": "^3.0.1",
@@ -114,11 +18,6 @@
     "cross-env": "^7.0.2",
     "discord.js-docgen": "git+https://github.com/discordjs/docgen.git",
     "dtslint": "^4.0.4",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
     "jest": "^26.6.0",
     "json-filter-loader": "^1.0.0",
     "lint-staged": "^10.4.2",
@@ -128,9 +27,6 @@
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
-  },
-  "engines": {
-    "node": ">=12.0.0"
   },
   "exports": {
     ".": [
@@ -143,12 +39,6 @@
     "./esm": "./esm/discord.mjs"
   },
   "homepage": "https://github.com/discordjs/discord.js#readme",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "keywords": [
     "discord",
     "api",
@@ -158,12 +48,8 @@
     "discordapp"
   ],
   "license": "Apache-2.0",
-  "lint-staged": {
-    "*.js": "eslint --fix",
-    "*.ts": "prettier --write"
-  },
   "main": "./src/index",
-  "name": "discord.js",
+  "name": "discord",
   "prettier": {
     "singleQuote": true,
     "printWidth": 120,
@@ -180,8 +66,6 @@
     "build:browser": "webpack",
     "docs": "docgen --source src --custom docs/index.yml --output docs/docs.json",
     "docs:test": "docgen --source src --custom docs/index.yml",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
     "lint:typings": "tslint typings/index.d.ts",
     "prepublishOnly": "npm run test && cross-env NODE_ENV=production npm run build:browser",
     "prettier": "prettier --write src/**/*.js typings/**/*.ts",
